// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileIcon /> Default rendering matches snapshot (borderColor) 1`] = `
<DocumentFragment>
  .c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  border-radius: 50%;
}

.c0 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:before {
  content: "";
  background-color: #333;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> Default rendering matches snapshot (hex + border) 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
}

<div
    class="c0"
  >
    <svg
      fill="none"
      height="0"
      viewBox="0 0 50 50"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          clipPathUnits="objectBoundingBox"
          id="hexPath"
          transform="scale(0.02, 0.02)"
        >
          <path
            d="M26.2,0.7l19.2,11.1c0.7,0.4,1.2,1.2,1.2,2.1v22.2c0,0.9-0.5,1.7-1.2,2.1L26.2,49.3c-0.7,0.4-1.7,0.4-2.4,0L4.5,38.2c-0.7-0.4-1.2-1.2-1.2-2.1V13.9c0-0.9,0.5-1.7,1.2-2.1L23.8,0.7C24.5,0.3,25.5,0.3,26.2,0.7z"
          />
        </clippath>
      </defs>
    </svg>
  </div>
  .c0 {
  position: relative;
  height: 120px;
  width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

.c0:before {
  content: "";
  background-color: #333;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  opacity: 50%;
}

.c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> Default rendering matches snapshot (transparentBorder) 1`] = `
<DocumentFragment>
  .c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  border-radius: 50%;
}

.c0 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  opacity: 50%;
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> rendering Default rendering matches snapshot (borderSize) 1`] = `
<DocumentFragment>
  .c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  border-radius: 50%;
}

.c0 {
  position: relative;
  height: 120px;
  width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> rendering Default rendering matches snapshot (custom size) 1`] = `
<DocumentFragment>
  .c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  border-radius: 50%;
}

.c0 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> rendering Default rendering matches snapshot (default size) 1`] = `
<DocumentFragment>
  .c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 40px;
  width: 40px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  border-radius: 50%;
}

.c0 {
  position: relative;
  height: 44px;
  width: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

<div
    class="c0"
    size="40"
  >
    <div
      class="c1 c2"
      size="40"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> rendering Default rendering matches snapshot (hex + custom size) 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
}

<div
    class="c0"
  >
    <svg
      fill="none"
      height="0"
      viewBox="0 0 50 50"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          clipPathUnits="objectBoundingBox"
          id="hexPath"
          transform="scale(0.02, 0.02)"
        >
          <path
            d="M26.2,0.7l19.2,11.1c0.7,0.4,1.2,1.2,1.2,2.1v22.2c0,0.9-0.5,1.7-1.2,2.1L26.2,49.3c-0.7,0.4-1.7,0.4-2.4,0L4.5,38.2c-0.7-0.4-1.2-1.2-1.2-2.1V13.9c0-0.9,0.5-1.7,1.2-2.1L23.8,0.7C24.5,0.3,25.5,0.3,26.2,0.7z"
          />
        </clippath>
      </defs>
    </svg>
  </div>
  .c0 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 100px;
  width: 100px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

<div
    class="c0"
    size="100"
  >
    <div
      class="c1 c2"
      size="100"
    />
  </div>
</DocumentFragment>
`;

exports[`<ProfileIcon /> rendering Default rendering matches snapshot (hex) 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
}

<div
    class="c0"
  >
    <svg
      fill="none"
      height="0"
      viewBox="0 0 50 50"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          clipPathUnits="objectBoundingBox"
          id="hexPath"
          transform="scale(0.02, 0.02)"
        >
          <path
            d="M26.2,0.7l19.2,11.1c0.7,0.4,1.2,1.2,1.2,2.1v22.2c0,0.9-0.5,1.7-1.2,2.1L26.2,49.3c-0.7,0.4-1.7,0.4-2.4,0L4.5,38.2c-0.7-0.4-1.2-1.2-1.2-2.1V13.9c0-0.9,0.5-1.7,1.2-2.1L23.8,0.7C24.5,0.3,25.5,0.3,26.2,0.7z"
          />
        </clippath>
      </defs>
    </svg>
  </div>
  .c0 {
  position: relative;
  height: 44px;
  width: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

.c0:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c1 {
  background-image: url("cat.png");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 40px;
  width: 40px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

<div
    class="c0"
    size="40"
  >
    <div
      class="c1 c2"
      size="40"
    />
  </div>
</DocumentFragment>
`;
